# NanoEngine

./: .gitignore  CMakeLists.txt  index.md
Game/: CMakeLists.txt  GameMain.cpp
Game/Cpp/: CMakeLists.txt  CSTest.cs  GameMain.cpp
NanoEngine/: CMakeLists.txt
NanoEngine/Client/: CMakeLists.txt  ClientGlobalContext.cpp  ClientGlobalContext.hpp  ClientMain.cpp  ClientMain.hpp  NanoEngineClientMain.cpp  NanoEngineClientMain.hpp
NanoEngine/Client/Application/: Application.hpp  WindowDefination.hpp
NanoEngine/Client/ECS/: ArcheType.cpp  ArcheType.hpp  ArcheTypeManager.cpp  ArcheTypeManager.hpp  Chunk.cpp  Chunk.hpp  Component.hpp  ComponentType.cpp  ComponentType.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
NanoEngine/Client/ECS/Details/: ArcheType.inl  EntityManager.inl
NanoEngine/Client/Gfx/: GraphicsManager.hpp
NanoEngine/Client/Input/: InputDefine.hpp  InputDevice.hpp  InputDeviceKeyboard.cpp  InputDeviceKeyboard.hpp  InputDeviceMouse.cpp  InputDeviceMouse.hpp  InputEnum.hpp  InputHelper.cpp  InputHelper.hpp  InputManager.cpp  InputManager.hpp  InputScheme.hpp  InputState.hpp
NanoEngine/Client/Main/: ClientDesc.hpp  ClientGlobalContext.cpp  ClientGlobalContext.hpp  ClientMain.cpp  ClientMain.hpp
NanoEngine/Client/Platform/Application/Win/: WinApplication.cpp  WinApplication.hpp
NanoEngine/Client/Platform/Input/Keyboard/: InputDeviceKeyboardWin.cpp  InputDeviceKeyboardWin.hpp
NanoEngine/Client/Platform/Input/Mouse/: InputDeviceMouseWin.cpp  InputDeviceMouseWin.hpp
NanoEngine/Client/Platform/RHI/Win/: D3DGraphicsManager.cpp  D3DGraphicsManager.hpp
NanoEngine/Common/: CMakeLists.txt  CommonGlobalContext.cpp  CommonGlobalContext.hpp  Fwd.cpp  Fwd.hpp  IRuntimeModule.hpp
NanoEngine/Common/CSDelegate/: CSDelegate.cpp  CSDelegate.hpp
NanoEngine/Common/Log/: Logger.cpp  Logger.hpp
NanoEngine/Common/Math/: Math.hpp  MathVector.inl  Quaternion.hpp  Vector.hpp
NanoEngine/Common/Math/Details/: Vector.inl
NanoEngine/Common/Memory/: Allocator.cpp  Allocator.hpp  MemoryManager.cpp  MemoryManager.hpp
NanoEngine/Common/Parallelism/: Task.cpp  Task.hpp  TaskScheduler.cpp  TaskScheduler.hpp  ThreadPool.hpp
NanoEngine/Common/Reflection/: Reflection.hpp  ReflectionTest.hpp
NanoEngine/Common/Script/Lua/: Global.lua
NanoEngine/Common/Thread/: Task.hpp  TaskManager.cpp  TaskManager.hpp  TaskPriority.hpp
NanoEngine/Common/Tick/: TickManager.hpp
NanoEngine/Common/Type/: ArrayWrapper.hpp  CommonMarco.hpp  Limit.hpp  MapWrapper.hpp  StringID.hpp  TypeDef.hpp  TypeInfo.hpp
NanoEngine/Premake/: CMakeLists.txt  Main.cpp  MetaGenerator.cpp  MetaGenerator.hpp  MetaInfo.hpp  Test.hpp
NanoEngine/Scripts/Lua/Common/: Class.lua  Global.lua  GlobalMeta.lua  Main.lua  Type.lua
NanoEngine/Test/: AllocatorTest.cpp  CMakeLists.txt  ECSTest.cpp  InputTest.cpp  MathTest.cpp  ThreadingTest.cpp
NanoEngine/ThirdParties/USRefl/: AttrList.h  BaseList.h  Field.h  FieldList.h  TStr.h
NanoEngine/ThirdParties/USRefl/detail/: Attr.inl  ElemList.inl  FieldTraits.h  TStr.inl  Util.inl
PixelEngine/: CMakeLists.txt
PixelEngine/Client/: CMakeLists.txt  PixelEngineClientMain.hpp
PixelEngine/Common/: CMakeLists.txt  CommonGlobalContext.cpp  CommonGlobalContext.hpp  IRuntimeModule.hpp
PixelEngine/Common/Log/: Logger.cpp  Logger.hpp
PixelEngine/Common/Math/: Math.hpp  MathArithmetic.inl  MathVector.inl
PixelEngine/Common/Thread/: Task.hpp  TaskManager.cpp  TaskManager.hpp  TaskPriority.hpp
PixelEngine/Common/Type/: ArrayWrapper.hpp  BasicType.hpp  CommonMarco.hpp  Delegate.hpp  Limit.hpp  MapWrapper.hpp  StringWrapper.hpp
Tools/Source/AOTCompiler/: AOTCompiler.csproj  Config.cs  Program.cs  Translator.cs
Tools/Source/AutoGenerator/: AutoGenerator.csproj  CSharpBindGenerator.cs  MetaGenerator.cs  NameSpaceSet.cs  Node.cs  NodeSet.cs  Program.cs  TypeInfoGenerator.cs
Tools/Source/Editor/: App.xaml  Editor.csproj  EditorMain.xaml  EditorMain.xaml.cs
game/: cs_test.cs  game_main.cpp
nano_engine/: CMakeLists.txt
nano_engine/client/: CMakeLists.txt
nano_engine/client/application/: application.hpp  window_defination.hpp
nano_engine/client/ecs/: arche_type.cpp  arche_type.hpp  chunk.hpp  component_type.hpp  entity.hpp  entity_manager.cpp  entity_manager.hpp
nano_engine/client/ecs/details/: arche_type.inl
nano_engine/client/gfx/: graphics_manager.cpp  graphics_manager.hpp
nano_engine/client/input/: input_define.hpp  input_device.hpp  input_device_keyboard.cpp  input_device_keyboard.hpp  input_device_mouse.cpp  input_device_mouse.hpp  input_enum.hpp  input_helper.cpp  input_helper.hpp  input_manager.cpp  input_manager.hpp  input_scheme.hpp  input_state.hpp
nano_engine/client/main/: client_desc.hpp  client_global_context.cpp  client_global_context.hpp  client_main.cpp  client_main.hpp
nano_engine/common/: CMakeLists.txt  common_global_context.cpp  common_global_context.hpp  fwd.cpp  fwd.hpp  runtime_module.hpp
nano_engine/common/cs_delegate/: cs_delegate.cpp  cs_delegate.hpp
nano_engine/common/log/: logger.hpp
nano_engine/common/math/: math.hpp  quaternion.hpp  vector.hpp
nano_engine/common/math/details/: quaternion.inl
nano_engine/common/memory/: allocator.cpp  allocator.hpp  memory_manager.cpp  memory_manager.hpp
nano_engine/common/parallelism/: task.cpp  task.hpp  task_scheduler.cpp  task_scheduler.hpp  thread_pool.hpp
nano_engine/common/reflection/: reflection_test.hpp
nano_engine/common/tick/: tick_manager.hpp
nano_engine/common/type/: array_wrapper.hpp  delegate.hpp  map_wrapper.hpp  memory_wrapper.hpp  queue_wrapper.hpp  string_id.hpp  string_wrapper.hpp
nano_engine/premake/: CMakeLists.txt  main.cpp  meta_generator.cpp  meta_generator.hpp  meta_info.hpp  test.hpp
nano_engine/scripts/lua/common/: class.lua  type.lua
nano_engine/test/: allocator_test.cpp  ecs_test.cpp  input_test.cpp  math_test.cpp  threading_test.cpp
nano_engine/third_parties/usrefl/: Attr.h  Base.h  ElemList.h  NamedValue.h  TypeInfo.h  TypeInfoBase.h  Util.h  config.h
nano_engine/third_parties/usrefl/detail/: TypeInfoBase.inl
(+9 files in other folders)
